# vsix-website

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .yamllint.yml  Dockerfile  MANIFEST.in  Makefile  README.md  manage.py  pyproject.toml  requirements.txt  setup.py  tox.ini
.github/workflows/: ci.yml  pre-commit.yml  registry.yml
.woodpecker/: docker.yaml  pre-commit.yaml  tox.yaml
docker/: build  init
vsix/: apps.py  asgi.py  pyinfo.py  settings.py  urls.py  views.py  werder.py  wsgi.py
vsix/static/vsix/: darkly.css  darkly.min.css  style.css
vsix/templates/: pyinfo.html
vsix/templates/vsix/: commandline.txt  commandline.txt.license  commandline_noauth.txt  commandline_noauth.txt.license  index.html
vsix/tests/: test_stub.py
