# SPDX-PackageSummary: vsix-website
# SPDX-FileCopyrightText: Copyright (C) 2020-2025 Ryan Finnie
# SPDX-License-Identifier: MPL-2.0
[project]
name = "vsix"
authors = [
    {name = "Ryan Finnie", email = "ryan@finnie.org"},
]
description = "vsix.us"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MPL-2.0"}
dependencies = [
    "Django",
    "django-xff",
    "tzdata",
]
dynamic = ["version"]

[project.optional-dependencies]
gunicorn = ["gunicorn"]

[tool.setuptools.packages.find]
include = [
    "vsix",
    "vsix.tests",
]

[tool.black]
line-length = 132
