# SPDX-PackageName: vsix-website
# SPDX-PackageSupplier: Ryan Finnie <ryan@finnie.org>
# SPDX-PackageDownloadLocation: https://github.com/rfinnie/vsix-website
# SPDX-FileCopyrightText: © 2020 Ryan Finnie <ryan@finnie.org>
# SPDX-License-Identifier: MPL-2.0
[project]
name = "vsix"
authors = [
    {name = "Ryan Finnie", email = "ryan@finnie.org"},
]
description = "vsix.us"
readme = "README.md"
requires-python = ">=3.12"
license = "MPL-2.0"
dependencies = [
    "Django",
    "django-xff",
    "tzdata",
]
dynamic = ["version"]

[project.optional-dependencies]
gunicorn = ["gunicorn"]

[tool.setuptools.packages.find]
include = [
    "vsix",
    "vsix.tests",
]

[tool.black]
line-length = 132
